--- a/src/BuildingBlocks/Volta.BuildingBlocks.Application/Volta.BuildingBlocks.Application.csproj
+++ b/src/BuildingBlocks/Volta.BuildingBlocks.Application/Volta.BuildingBlocks.Application.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.1.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Volta.BuildingBlocks.Domain\Volta.BuildingBlocks.Domain.csproj" />
   </ItemGroup>
 
 </Project>
