added hosted service and arch tests

--- a/src/Modules/Stocks/Volta.Stocks.WebApi/Volta.Stocks.WebApi.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.WebApi/Volta.Stocks.WebApi.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Volta.Stocks.Application\Volta.Stocks.Application.csproj" />
+  </ItemGroup>
+
 </Project>
