--- a/src/Modules/Stocks/Volta.Stocks.WebApi/Volta.Stocks.WebApi.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.WebApi/Volta.Stocks.WebApi.csproj
@@ -1,11 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <ProjectReference Include="..\Volta.Stocks.Application\Volta.Stocks.Application.csproj" />
+    <ProjectReference Include="..\Volta.Stocks.IEXCloud\Volta.Stocks.IEXCloud.csproj" />
+    <ProjectReference Include="..\Volta.Stocks.Infrastructure\Volta.Stocks.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
