--- a/src/Modules/Stocks/Volta.Stocks.Infrastructure/Volta.Stocks.Infrastructure.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.Infrastructure/Volta.Stocks.Infrastructure.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,9 +10,11 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\Volta.BuildingBlocks.Infrastructure\Volta.BuildingBlocks.Infrastructure.csproj" />
     <ProjectReference Include="..\Volta.Stocks.Application\Volta.Stocks.Application.csproj" />
   </ItemGroup>
 
