--- a/src/Modules/Stocks/Volta.Stocks.WebApi/appsettings.json
+++ b/src/Modules/Stocks/Volta.Stocks.WebApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StockDatabase": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=StocksDb;Integrated Security=SSPI;"
+  }
 }
