added integration events and added stock domain events

--- a/src/Modules/Stocks/Volta.Stocks.WebApi/appsettings.json
+++ b/src/Modules/Stocks/Volta.Stocks.WebApi/appsettings.json
@@ -8,6 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "StockDatabase": "Data Source=(LocalDb)\\MSSQLLocalDB;Initial Catalog=StocksDb;Integrated Security=SSPI;"
-  }
+    "StockDatabase": "Server=.;Initial Catalog=Stocks;Integrated Security=true"
+  },
+  "SubscriptionClientName": "Stocks",
+  "EventBusRetryCount": 5,
+  "EventBusConnection": "localhost",
+  "EventBusUserName": "",
+  "EventBusPassword": ""
 }
