--- a/src/BuildingBlocks/Volta.BuildingBlocks.Infrastructure/Volta.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/Volta.BuildingBlocks.Infrastructure/Volta.BuildingBlocks.Infrastructure.csproj
@@ -6,6 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    <PackageReference Include="Polly" Version="7.2.1" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
