--- a/src/Modules/Stocks/Volta.Stocks.WebApi.IntegrationTests/Volta.Stocks.WebApi.IntegrationTests.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.WebApi.IntegrationTests/Volta.Stocks.WebApi.IntegrationTests.csproj
@@ -7,9 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="appsettings.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
-    <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -22,7 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Volta.Stocks.Domain\Volta.Stocks.Domain.csproj" />
+    <ProjectReference Include="..\Volta.Stocks.Integration.Core\Volta.Stocks.Integration.Core.csproj" />
+    <ProjectReference Include="..\Volta.Stocks.WebApi\Volta.Stocks.WebApi.csproj" />
   </ItemGroup>
 
 </Project>
