--- a/src/Modules/Stocks/Volta.Stocks.WebApi.IntegrationTests/appsettings.json
+++ b/src/Modules/Stocks/Volta.Stocks.WebApi.IntegrationTests/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
-    "ConnectionStrings": {
-        "Database": "Server=.;Database=Volta.Stocks;User Id=sa;Password=Pass@word"
-    }
+  "ConnectionStrings": {
+    "Database": "Server=.;Initial Catalog=TemplateDb;Integrated Security=true"
+  }
 }
