compiling with outbox

--- a/src/Modules/Stocks/Volta.Stocks.Application/Volta.Stocks.Application.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.Application/Volta.Stocks.Application.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MediatR.Extensions.Autofac.DependencyInjection" Version="7.0.0" />
     <ProjectReference Include="..\..\..\BuildingBlocks\Volta.BuildingBlocks.Application\Volta.BuildingBlocks.Application.csproj" />
     <ProjectReference Include="..\Volta.Stocks.Domain\Volta.Stocks.Domain.csproj" />
+    <ProjectReference Include="..\Volta.Stocks.IntegrationEvents\Volta.Stocks.IntegrationEvents.csproj" />
   </ItemGroup>
 
 </Project>
