--- a/src/BuildingBlocks/Volta.BuildingBlocks.Infrastructure/Volta.BuildingBlocks.Infrastructure.csproj
+++ b/src/BuildingBlocks/Volta.BuildingBlocks.Infrastructure/Volta.BuildingBlocks.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Volta.BuildingBlocks.Application\Volta.BuildingBlocks.Application.csproj" />
+    <ProjectReference Include="..\Volta.BuildingBlocks.EventBus.RabbitMQ\Volta.BuildingBlocks.EventBus.RabbitMQ.csproj" />
   </ItemGroup>
 
 </Project>
