--- a/src/Modules/Stocks/Volta.Stocks.Infrastructure/Volta.Stocks.Infrastructure.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.Infrastructure/Volta.Stocks.Infrastructure.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.0">
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\BuildingBlocks\Volta.BuildingBlocks.Infrastructure\Volta.BuildingBlocks.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\Volta.BuildingBlocks.Infrastructure.EntityFramework\Volta.BuildingBlocks.Infrastructure.EntityFramework.csproj" />
     <ProjectReference Include="..\Volta.Stocks.Application\Volta.Stocks.Application.csproj" />
   </ItemGroup>
 
