--- a/src/Modules/Stocks/Volta.Stocks.Domain.UnitTests/Volta.Stocks.Domain.UnitTests.csproj
+++ b/src/Modules/Stocks/Volta.Stocks.Domain.UnitTests/Volta.Stocks.Domain.UnitTests.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Volta.Stocks.Domain\Volta.Stocks.Domain.csproj" />
+    <ProjectReference Include="..\Volta.Stocks.Domain\Volta.Stocks.Domain.csproj" />
   </ItemGroup>
 
 </Project>
