--- a/src/BuildingBlocks/Volta.BuildingBlocks.Infrastructure.EntityFramework/Volta.BuildingBlocks.Infrastructure.EntityFramework.csproj
+++ b/src/BuildingBlocks/Volta.BuildingBlocks.Infrastructure.EntityFramework/Volta.BuildingBlocks.Infrastructure.EntityFramework.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Volta.BuildingBlocks.Infrastructure\Volta.BuildingBlocks.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="InternalCommands\" />
+  </ItemGroup>
+
 </Project>
