--- a/src/BuildingBlocks/Volta.BuildingBlocks.Application/Volta.BuildingBlocks.Application.csproj
+++ b/src/BuildingBlocks/Volta.BuildingBlocks.Application/Volta.BuildingBlocks.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.0.0" />
+    <PackageReference Include="FluentValidation" Version="9.3.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
   </ItemGroup>
 
