--- a/src/Modules/Portfolio/Volta.Portfolio.Domain/Volta.Portfolios.Domain.csproj
+++ b/src/Modules/Portfolio/Volta.Portfolio.Domain/Volta.Portfolios.Domain.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\..\BuildingBlocks\Volta.BuildingBlocks.Domain\Volta.BuildingBlocks.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Members\" />
+  </ItemGroup>
+
 </Project>
