--- a/Volta.Client/package.json
+++ b/Volta.Client/package.json
@@ -5,6 +5,7 @@
     "start": "webpack-dev-server --config webpack.config.dev.js --port 3000"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "5.14.0",
     "bootstrap": "4.3.1",
     "immer": "2.1.3",
     "prop-types": "15.7.2",
@@ -15,7 +16,8 @@
     "react-toastify": "4.5.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "url-loader": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
@@ -31,6 +33,7 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-react": "7.12.4",
     "fetch-mock": "7.3.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "3.2.0",
     "http-server": "0.9.0",
     "jest": "24.5.0",
